# zerodb

./: .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  hello.cpp
